<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selected Location Name"
            android:id="@+id/locationNameTextView"
            android:textSize="18sp"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/createPostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create a Post" />

        <Button
            android:id="@+id/reviewPostsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Review Posts" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
