<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <!-- Google Sign-In Button -->
    <!--        android:drawableStart="@drawable/google_icon" -->
    />

    <!-- Facebook Sign-In Button -->
    <Button
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:drawablePadding="8dp"
        android:text="Continue with Google"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--        android:drawableStart="@drawable/facebook_icon" -->
    />
</androidx.constraintlayout.widget.ConstraintLayout>